force-app/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Fact Sheet to be Sent Out</fullName>
            </value>
            <value>
                <fullName>Awaiting Follow up after Fact Sheet</fullName>
            </value>
            <value>
                <fullName>Awaiting Short Deck to be Sent Out</fullName>
            </value>
            <value>
                <fullName>Awaiting Initial Call/Meeting to be Schedule</fullName>
            </value>
            <value>
                <fullName>Awaiting NDA to be Signed</fullName>
            </value>
            <value>
                <fullName>Awaiting Extended Deck to be Sent Out</fullName>
            </value>
            <value>
                <fullName>Awaiting Extended Deck Follow Up</fullName>
            </value>
            <value>
                <fullName>Awaiting Invitation to Due Diligence</fullName>
            </value>
            <value>
                <fullName>Awaiting Follow up after Due Diligence</fullName>
            </value>
            <value>
                <fullName>Awaiting Term Sheet to be Signed</fullName>
            </value>
            <value>
                <fullName>Awaiting Invitation to Due Diligence Confirmatory</fullName>
            </value>
            <value>
                <fullName>Awaiting Follow up after Due Diligence Confirmatory</fullName>
            </value>
            <value>
                <fullName>Awaiting Q&amp;A to be Answered</fullName>
            </value>
            <value>
                <fullName>Awaiting Invitation for on-site Mgmt. Meeting</fullName>
            </value>
            <value>
                <fullName>Awaiting ISHA Negotiation</fullName>
            </value>
            <value>
                <fullName>Awaiting ISHA to be Signed</fullName>
            </value>
            <value>
                <fullName>Awaiting Deal Closure</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Proceed to the next stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>