force-app/main/default/objects/Opportunity/fields/Tech_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tech_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please select the responsible tech / product person. For example if you need help for a workshop or technical question from a potential customer.</description>
    <inlineHelpText>Please select the responsible tech / product person. For example if you need help for a workshop or technical question from a potential customer.</inlineHelpText>
    <label>Tech Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>