force-app/main/default/objects/Opportunity/fields/Tech_Stage__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stage__c</fullName>
    <description>Solution Engineer Tech Stages</description>
    <inlineHelpText>Solution Engineer Tech Stages</inlineHelpText>
    <label>Tech Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Start</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>PoC</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Family &amp; Friends</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>