force-app/main/default/objects/Opportunity/fields/Tech_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Tech_Status_Description__c</fullName>
    <description>Description of what is going on with the Tech Process.</description>
    <inlineHelpText>Description of what is going on with the Tech Process.</inlineHelpText>
    <label>Tech Status Description</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>