force-app/main/default/objects/Opportunity/fields/Term_Sheet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Signed__c</fullName>
    <label>Term Sheet Signed</label>
    <type>DateTime</type>
</CustomField>