force-app/main/default/objects/Opportunity/fields/Termsheet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Termsheet_Signed__c</fullName>
    <label>Termsheet Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>