force-app/main/default/objects/Opportunity/fields/Termsheet_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Termsheet_Signed_Date__c</fullName>
    <label>Termsheet Signed Date</label>
    <type>DateTime</type>
</CustomField>