force-app/main/default/objects/Opportunity/fields/Use_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Description__c</fullName>
    <description>Please give a description of the use case. * Minimum of 50 Characters *</description>
    <inlineHelpText>Please give a description of the use case. * Minimum of 50 Characters *</inlineHelpText>
    <label>Use Case Description</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>