force-app/main/default/objects/Opportunity/recordTypes/Acquisition.recordType-meta.xml
<RecordType>
    <fullName>Acquisition</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Acquisition</label>
</RecordType>