force-app/main/default/objects/Opportunity/recordTypes/Board_ecosystem_development.recordType-meta.xml
<RecordType>
    <fullName>Board_ecosystem_development</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Board ecosystem development</label>
</RecordType>