force-app/main/default/objects/Opportunity/recordTypes/Build_ventures.recordType-meta.xml
<RecordType>
    <fullName>Build_ventures</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Build ventures</label>
</RecordType>