force-app/main/default/objects/Opportunity/recordTypes/Finleap_Build_Investment.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Build_Investment</fullName>
    <active>true</active>
    <businessProcess>Finleap Investments</businessProcess>
    <description>Finleap Build Investment</description>
    <label>Finleap Build Investment</label>
</RecordType>