force-app/main/default/objects/Opportunity/recordTypes/Finleap_Build_Project.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Build_Project</fullName>
    <active>true</active>
    <businessProcess>Finleap Sales</businessProcess>
    <description>Finleap Build Project</description>
    <label>Finleap Build Project</label>
</RecordType>