force-app/main/default/objects/Opportunity/recordTypes/Finleap_Connect_Standard_Sales.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Connect_Standard_Sales</fullName>
    <active>true</active>
    <businessProcess>Finleap Connect Sales Process</businessProcess>
    <description>Finleap Connect Standard Sales</description>
    <label>Finleap Connect Standard Sales</label>
</RecordType>