force-app/main/default/objects/Opportunity/recordTypes/Finleap_Ecosystem_Development.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Ecosystem_Development</fullName>
    <active>true</active>
    <businessProcess>Finleap Sales</businessProcess>
    <description>Finleap Ecosystem Development</description>
    <label>Finleap Ecosystem Development</label>
</RecordType>