force-app/main/default/objects/Opportunity/recordTypes/Finleap_Investment_in_Finleap_Group.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Investment_in_Finleap_Group</fullName>
    <active>true</active>
    <businessProcess>Finleap Investments</businessProcess>
    <description>Finleap Invesment in Finleap Group</description>
    <label>Finleap Investment in Finleap Group</label>
</RecordType>