force-app/main/default/objects/Opportunity/recordTypes/Finleap_Investment_in_Venture.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Investment_in_Venture</fullName>
    <active>true</active>
    <businessProcess>Finleap Investments</businessProcess>
    <description>Finleap Investment in Venture</description>
    <label>Finleap Investment in Venture</label>
</RecordType>