force-app/main/default/objects/Opportunity/recordTypes/Finleap_Investment_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Investment_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Finleap Investment</description>
    <label>Finleap Investment Opportunity</label>
</RecordType>