force-app/main/default/objects/Opportunity/recordTypes/Finleap_Sales_for_Ventures.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Sales_for_Ventures</fullName>
    <active>true</active>
    <businessProcess>Finleap Connect Sales Process</businessProcess>
    <description>Finleap Sales for Ventures</description>
    <label>Finleap Sales for Ventures</label>
</RecordType>