force-app/main/default/objects/Opportunity/recordTypes/Finleap_Venture_Acquisition.recordType-meta.xml
<RecordType>
    <fullName>Finleap_Venture_Acquisition</fullName>
    <active>true</active>
    <businessProcess>Finleap Investments</businessProcess>
    <description>Finleap Venture Acquisition</description>
    <label>Finleap Venture Acquisition</label>
</RecordType>