force-app/main/default/objects/Opportunity/recordTypes/Investment_in_finleap.recordType-meta.xml
<RecordType>
    <fullName>Investment_in_finleap</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Investment in finleap</label>
</RecordType>