force-app/main/default/objects/Opportunity/recordTypes/Investment_in_venture.recordType-meta.xml
<RecordType>
    <fullName>Investment_in_venture</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Investment in venture</label>
</RecordType>