force-app/main/default/objects/Opportunity/recordTypes/Sales_for_Connect.recordType-meta.xml
<RecordType>
    <fullName>Sales_for_Connect</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Sales for Connect</description>
    <label>Sales for Connect</label>
</RecordType>