force-app/main/default/objects/Opportunity/recordTypes/Sales_for_Connect_venture.recordType-meta.xml
<RecordType>
    <fullName>Sales_for_Connect_venture</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Sales for Connect venture</description>
    <label>Sales for Connect venture</label>
</RecordType>