force-app/main/default/objects/Opportunity/recordTypes/Sales_for_venture.recordType-meta.xml
<RecordType>
    <fullName>Sales_for_venture</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Sales for venture</label>
</RecordType>