force-app/main/default/objects/Opportunity/recordTypes/Standard_Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Standard_Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Standard Sales Opportunity</description>
    <label>Standard Sales Opportunity</label>
</RecordType>