force-app/main/default/objects/Opportunity/validationRules/ClosedLost_or_Cancelled_cant_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedLost_or_Cancelled_cant_be_Changed</fullName>
    <active>true</active>
    <description>Opportunities that are Closed Lost cannot be changed anymore</description>
    <errorConditionFormula>AND(
	OR(
		OR(
			AND(
				ISCHANGED(StageName), 
				ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;), 
				NOT(ISPICKVAL(StageName,&quot;Closed Lost&quot;))
				),
			AND(
				ISCHANGED(StageName), 
				ISPICKVAL(PRIORVALUE(StageName),&quot;Cancelled&quot;), 
				NOT(ISPICKVAL(StageName,&quot;Cancelled&quot;))
				)
		),

		AND(

			OR(
				AND(
					ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
					NOT(ISCHANGED(StageName))
					),
				AND(
					ISPICKVAL(StageName, &quot;Cancelled&quot;), 
					NOT(ISCHANGED(StageName))
				)
			),

			OR(
				/* ISCHANGED( StageName ), */			
				ISCHANGED( Priority__c ),
				ISCHANGED( Finleap_Company__c ),
				ISCHANGED( Product_Vertical__c ),
				ISCHANGED( Product__c ),
				ISCHANGED( Target_Countries__c ),
				ISCHANGED( Tech_Owner__c ),
				ISCHANGED( Tech_Stage__c ),
				ISCHANGED( CloseDate ),
				ISCHANGED( Revenue_Start_Date__c ),
				ISCHANGED( MRR_Monthly_Recurring_Revenue__c ),
				ISCHANGED( OTR_One_Time_Revenue__c ),
				ISCHANGED( Contract_End_Date__c ),
				ISCHANGED( Use_Case_Description__c ),
				ISCHANGED( Regulatory_Status__c ),
				ISCHANGED( KYC_Check_Status__c ),
				ISCHANGED( KYC_Form_Filled_Out__c ),
				ISCHANGED( CampaignId ),
				ISCHANGED( OwnerId )
			)	
		)
	),
	NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
)</errorConditionFormula>
    <errorMessage>Closed Lost or Cancelled opportunities cannot be changed anymore</errorMessage>
</ValidationRule>