force-app/main/default/objects/Opportunity/validationRules/Contract_End_Date_must_be_filled_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_End_Date_must_be_filled_out</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		AND(
		NOT(ISBLANK(Contract_End_Date__c)),
		NOT(ISPICKVAL(StageName,&#39;Cancelled&#39;))			
		),
		
		AND(
		ISBLANK(Contract_End_Date__c),
		ISPICKVAL(StageName,&#39;Cancelled&#39;)			
		)
	),
	NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
	
)</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Contract End Date must be filled out if case the contract is cancelled.
However, if the contract is not cancelled, you cannot enter a Contract End Date.</errorMessage>
</ValidationRule>