force-app/main/default/objects/Opportunity/validationRules/ContractEndDate_Dates_must_be_correct.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractEndDate_Dates_must_be_correct</fullName>
    <active>true</active>
    <description>Contract End Date must be within a normal range</description>
    <errorConditionFormula>AND(

NOT(ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;)),
NOT(ISPICKVAL(StageName, &quot;Cancelled&quot;)),

OR(

Revenue_Start_Date__c &lt;= TODAY(),
Revenue_Start_Date__c &lt;= DATEVALUE(CreatedDate),
Revenue_Start_Date__c &gt; ADDMONTHS(TODAY(), 15)



),
NOT(CONTAINS($Label.Users_Exclusion,$User.Username)),
RecordTypeId == $CustomMetadata.Constant__mdt.FinleapConnectStandardSales_RecordTypeId.value__c
)</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Contract End Date Cannot be less than today or more than 15 months in future.</errorMessage>
</ValidationRule>