force-app/main/default/objects/Opportunity/validationRules/Dates_must_be_correct.validationRule-meta.xml
<ValidationRule>
	<fullName>Dates_must_be_correct</fullName>
	<active>true</active>
	<description>Dates must be within a normal range</description>
	<errorConditionFormula>IF( Record_Id__c == $CustomMetadata.Constant__mdt.Opp_Standard_Record_Type_Id.Value__c , 
AND(

	NOT(ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;)),
	NOT(ISPICKVAL(StageName, &quot;Cancelled&quot;)),
	
	OR(
		CloseDate &lt; TODAY(),
		CloseDate &lt;= DATEVALUE(CreatedDate),
		CloseDate &gt; ADDMONTHS(TODAY(), 12),
		
		Revenue_Start_Date__c &lt;= TODAY(),
		Revenue_Start_Date__c &lt;= DATEVALUE(CreatedDate),
		Revenue_Start_Date__c &gt; ADDMONTHS(TODAY(), 15),
		
		Contract_End_Date__c &lt;= TODAY(),
		Contract_End_Date__c &lt;= DATEVALUE(CreatedDate),
		Contract_End_Date__c &gt; ADDMONTHS(TODAY(), 3),
		
		CloseDate &gt; Revenue_Start_Date__c
		
	),
	NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
)
, 
False)</errorConditionFormula>
	<errorMessage>Please check the dates you are entering.
Close Date, Revenue Start Date, Contract End Date.</errorMessage>
</ValidationRule>