force-app/main/default/objects/Opportunity/validationRules/KYC_Check_needs_to_be_done.validationRule-meta.xml
<ValidationRule>
   <fullName>KYC_Check_needs_to_be_done</fullName>
   <active>true</active>
   <description>KYC Check needs to be done</description>
   <errorConditionFormula>IF( Record_Id__c == $CustomMetadata.Constant__mdt.Opp_Standard_Record_Type_Id.Value__c , 
AND(
   OR(
      ISCHANGED( StageName ), 
      ISNEW()
      ),
   OR(
      NOT(ISPICKVAL(KYC_Form_Filled_Out__c , &quot;Yes&quot;)),
      NOT(ISPICKVAL(KYC_Check_Status__c, &quot;Customer Passed&quot;)),
      ISPICKVAL( Regulatory_Status__c , &quot;To be determined&quot;),
      ISBLANK(TEXT(Regulatory_Status__c))	  
   ),
   OR(
      ISPICKVAL(PRIORVALUE(StageName), &quot;Qualifying&quot;),
      ISPICKVAL(PRIORVALUE(StageName), &quot;Engage&quot;),
      ISPICKVAL(PRIORVALUE(StageName), &quot;Convince&quot;),
      ISPICKVAL(PRIORVALUE(StageName), &quot;Offer&quot;),
      ISPICKVAL(PRIORVALUE(StageName), &quot;Negotiate&quot;),
      ISNEW()
   ),
   OR(
      ISPICKVAL(StageName, &quot;Confirmed&quot;),
      ISPICKVAL(StageName, &quot;Closed Won&quot;)
      /* ISPICKVAL(StageName, &quot;Cancelled&quot;) */
   ),
   NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
)
, 
False)</errorConditionFormula>
   <errorMessage>The Regulatory Status and KYC Form need to be filled out and the Customer needs to pass the check by compliance.</errorMessage>
</ValidationRule>