force-app/main/default/objects/Opportunity/validationRules/Opportunity_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Lost_Reason</fullName>
    <active>true</active>
    <description>A reason must be entered when an Opportunity is Lost</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL (StageName, &quot;Closed Lost&quot;),ISPICKVAL (StageName, &quot;Cancelled&quot;)),
ISBLANK(TEXT(Loss_Reason__c)),
NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please enter a reason for the Loss of this Opportunity.</errorMessage>
</ValidationRule>