force-app/main/default/objects/Opportunity/validationRules/Oppty_Needs_to_be_Filled_out_Properly.validationRule-meta.xml
<ValidationRule>
    <fullName>Oppty_Needs_to_be_Filled_out_Properly</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Record_Id__c == $CustomMetadata.Constant__mdt.Opp_Standard_Record_Type_Id.Value__c ,
AND(
    NOT(
	    OR(
	    ISPICKVAL(StageName, &#39;Qualifying&#39;),
	    ISPICKVAL(StageName, &#39;Engage&#39;),
	    ISPICKVAL(StageName, &#39;Closed Lost&#39;)
        )
	),
	OR(
	ISBLANK(Finleap_Company__c ),
	ISBLANK(Product_Vertical__c),
	ISBLANK(Product__c),
	ISBLANK(TEXT(Type)),
	ISBLANK(Target_Countries__c),
	ISBLANK(Use_Case_Description__c),
	ISBLANK(TEXT(Revenue_Start_Date__c)),
	ISBLANK(TEXT(MRR_Monthly_Recurring_Revenue__c)),
	ISBLANK(TEXT(OTR_One_Time_Revenue__c)),	
	AND(MRR_Monthly_Recurring_Revenue__c &lt;= 0, OTR_One_Time_Revenue__c &lt;= 0),
	LEN(Use_Case_Description__c) &lt;= 50
	),
	NOT(CONTAINS($Label.Users_Exclusion,$User.Username))
)
, 
False)</errorConditionFormula>
    <errorMessage>Please make sure these fields are properly filled out:
Finleap Company, Product Vertical, Product, Type, Target Countries, Use Case Description, Revenue Start Date, MRR, OTR</errorMessage>
</ValidationRule>