force-app/main/default/objects/Opportunity/validationRules/Qualifying_Stage_Probablity.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualifying_Stage_Probablity</fullName>
    <active>true</active>
    <description>Opportunity in Qualifying should have not more then 0 probability</description>
    <errorConditionFormula>AND(
 ISPICKVAL(StageName, &quot;Qualifying&quot;), 
 Probability != 0 ,
 NOT(CONTAINS($Label.Users_Exclusion,$User.Username)),
RecordTypeId == $CustomMetadata.Constant__mdt.FinleapConnectStandardSales_RecordTypeId.value__c
)</errorConditionFormula>
    <errorDisplayField>Probability</errorDisplayField>
    <errorMessage>Opportunities in qualifying stage must have probability as 0</errorMessage>
</ValidationRule>