force-app/main/default/objects/Opportunity/validationRules/Revenue_Data_and_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Data_and_Dates</fullName>
    <active>true</active>
    <description>Revenue Data and Dates must be entered at this time in the Opportunity</description>
    <errorConditionFormula>AND (
  
  OR (
     ISPICKVAL(StageName, &quot;Offer&quot;),
     ISPICKVAL(StageName, &quot;Negotiate&quot;),
     ISPICKVAL(StageName, &quot;Confirmed&quot;),
     ISPICKVAL(StageName, &quot;Closed Won&quot;)
	 ),
  
  AND( 
	  OR ( 
		 ISBLANK(TEXT(OTR_One_Time_Revenue__c)),
            ISBLANK(TEXT(MRR_Monthly_Recurring_Revenue__c)),
		 ISBLANK(TEXT(Revenue_Start_Date__c))
		 )),
	 
     NOT(CONTAINS($Label.Users_Exclusion,$User.Username)),
     RecordTypeId == $CustomMetadata.Constant__mdt.FinleapConnectStandardSales_RecordTypeId.value__c
)</errorConditionFormula>
    <errorMessage>Rev. Start Date, MRR and OTR must be filled out at this point.</errorMessage>
</ValidationRule>