force-app/main/default/objects/Opportunity/validationRules/Tech_Owner_for_FLC_Products_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Tech_Owner_for_FLC_Products_is_Mandatory</fullName>
    <active>false</active>
    <description>For the Vertical or Product(s) chosen, a Tech Owner is Mandatory.
The Tech Owner also needs to update the Tech Stage and Tech Status.</description>
    <errorConditionFormula>AND(
    NOT(
	    OR(
	    ISPICKVAL(StageName, &apos;Qualifying&apos;),
	    ISPICKVAL(StageName, &apos;Engage&apos;),
	    ISPICKVAL(StageName, &apos;Convince&apos;),
	    ISPICKVAL(StageName, &apos;Closed Lost&apos;)
        )
	),
	OR(
	INCLUDES(Product_Vertical__c, &apos;White-Label Products&apos;),
	INCLUDES(Product_Vertical__c, &apos;Micro Products&apos;),
	INCLUDES(Product_Vertical__c, &apos;Core Services&apos;),
	INCLUDES(Product_Vertical__c, &apos;Data Services&apos;),
	INCLUDES(Product__c, &apos;WL - Switchkit&apos;),
	INCLUDES(Product__c, &apos;WL - Virtual CFO&apos;),
	INCLUDES(Product__c, &apos;WL - Digital Bank&apos;),
	INCLUDES(Product__c, &apos;MP - RegShield&apos;),
	INCLUDES(Product__c, &apos;MP - Account Service&apos;),
	INCLUDES(Product__c, &apos;MP - Contract Service&apos;),
	INCLUDES(Product__c, &apos;MP - Document Service&apos;),
	INCLUDES(Product__c, &apos;MP - Notification Service&apos;),
	INCLUDES(Product__c, &apos;MP - KYC&apos;),
	INCLUDES(Product__c, &apos;MP - I / A / M&apos;),
	INCLUDES(Product__c, &apos;CS - Finleap Cloud (PaaS)&apos;),
	INCLUDES(Product__c, &apos;DS - Analytics &amp; Segmentation&apos;),
	INCLUDES(Product__c, &apos;DS - Data Science&apos;),
	INCLUDES(Product__c, &apos;DS - Data activation&apos;)
	),
	OR(
	ISBLANK(Tech_Owner__c),
	ISBLANK(TEXT(Tech_Stage__c)),
	ISBLANK(TEXT(Tech_Status__c))	
	),
	NOT(CONTAINS($Label.Users_Exclusion,$User.Username)),
	RecordTypeId == $CustomMetadata.Constant__mdt.FinleapConnectStandardSales_RecordTypeId.value__c
)</errorConditionFormula>
    <errorMessage>For the Vertical or Product(s) chosen, a Tech Owner is Mandatory.
The Tech Owner also needs to update the Tech Stage and Tech Status.</errorMessage>
</ValidationRule>