force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Revenue_Start_Date__c</columns>
    <columns>MRR_Monthly_Recurring_Revenue__c</columns>
    <columns>OTR_One_Time_Revenue__c</columns>
    <columns>Overall_Deal_Size__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>