force-app/main/default/objects/Opportunity/listViews/ClosingNextMonth.listView-meta.xml
<ListView>
    <fullName>ClosingNextMonth</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Revenue_Start_Date__c</columns>
    <columns>MRR_Monthly_Recurring_Revenue__c</columns>
    <columns>OTR_One_Time_Revenue__c</columns>
    <columns>Overall_Deal_Size__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Closing Next Month</label>
</ListView>