force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Revenue_Start_Date__c</columns>
    <columns>MRR_Monthly_Recurring_Revenue__c</columns>
    <columns>OTR_One_Time_Revenue__c</columns>
    <columns>Overall_Deal_Size__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>Opportunity Pipeline</label>
</ListView>